<resources>
    <string name="app_name">LupsyApp</string>
    <string name="BtnEntrar">Entrar</string>
    <string name="etPalavra_passe">Palavra-Passe</string>
    <string name="etE_mail">E-mail</string>
    <string name="tvPassword">Password</string>
    <string name="tvEmail">E-mail</string>
    <string name="email_invalido">Email Invalido</string>
    <string name="password_invalida">password invalida</string>
    <string name="tvBV">Welcome</string>
    <string name="tvData">dd/mm/aaaa</string>
    <string name="tvSpacing" />
    <string name="tvUser">User</string>
    <string name="tvVendas">Mais Vendidas</string>
    <string name="tvDescricao">Cerveja lager de cor dourada, com sabor leve e amargor suave, destacada por sua qualidade e consistência desde 1873</string>
    <string name="tvNome">Heineken</string>
    <string name="favoritos">Favoritos</string>
    <string name="loja">Loja</string>
    <string name="pesquisa">Pesquisa</string>
    <string name="carrinho">Carrinho</string>
    <string name="perfil">Perfil</string>
    <string name="NConta">Não tens conta?</string>
    <string name="Conta">Criar Conta</string>
    <string name="tvNomeUtilizador">Nome Utilizador</string>
    <string name="etNome">Nome Utilizador</string>
    <string name="BtnCriar">Criar</string>
    <string name="nome_invalido" />
    <string name="add_content_hint" />
    <string name="hist_rico_de_bebidas">Histórico de bebidas</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="tvFav">Favoritas</string>
    <string name="tvLoja">Loja</string>
    <string name="tvCar">O teu Carrinho</string>
    <string name="nome"> Nome 1 </string>
    <string name="descricao"> Descrição 1 </string>
    <string name="teor_alcool"> 1.5 </string>
    <string name="preco"> 1.5 </string>
    <string name="save_content">  </string>
    <string name="teor_alcoolico">Teor Alcoólico</string>
    <string name="precos">Preço</string>
    <string name="tchim_tchim_icon">TCHIM-TCHIM Icon</string>
    <string name="tchim_tchim">TCHIM-TCHIM</string>
    <string name="favoritos_icon">favoritos</string>
    <string name="favoritar">Favoritar</string>
    <string name="tvUsername">Username</string>
    <string name="EtHUsername">Username</string>
    <string name="carrinho_icon" />
    <string name="top_3_bebidas_que_mais_bebeste">Top 3 Bebidas que mais bebeste</string>
    <string name="et_NomeCev">Nome da Cerveja…</string>
    <string name="etDescricao">Descrição da Cerveja…</string>
    <string name="etTeor_Alcool">Teor Alcóolico%…</string>
    <string name="etPreco">Preço€…</string>
    <string name="save">Save Content</string>
    <string name="txt_adicionar" />
    <string name="rate">X.X</string>
    <string name="tvNIF">NIF</string>
    <string name="etNIF">NIF(9 digitos)</string>
    <string name="tvTELE">Telefone</string>
    <string name="etTELE">Telefone</string>
    <string name="tvMorada">Morada</string>
    <string name="etMorada">Morada</string>
    <string name="error_nome">O nome da Cerveja não é válido</string>
    <string name="error_descricao">A descrição da Cerveja não é válida</string>
    <string name="error_teor_alcoolico">Teor de Alcóol com valor inválido</string>
    <string name="error_preco">Preço com valor inválido</string>
    <string name="beer_added">Cerveja Adicionada com Sucesso</string>
    <string name="cart">Carrinho</string>
    <string name="ativa_para_clientes">Ativa para Clientes</string>
    <string name="pagar">Pagar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tvHistoricoFatura">Histórico de Compras</string>
    <string name="fab_action" />
    <string name="ip">ip</string>
    <string name="ip_hint">IP</string>
    <string name="txt_salvar">guardar</string>


</resources>