<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="#D36B3E21"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignUpActivity">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        app:srcCompat="@drawable/logotipo" />

    <TextView
        android:id="@+id/tvNomeCad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:text="@string/tvNomeUtilizador"
        android:textColor="@color/preto_fosco" />

    <EditText
        android:id="@+id/etNomeCad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/editborder"
        android:ems="10"
        android:hint="@string/etNome"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:paddingStart="10dp" />

    <View
        android:id="@+id/vSpacing4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.01" />

    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:textColor="@color/preto_fosco"
        android:text="@string/tvUsername" />

    <EditText
        android:id="@+id/etUsernameCad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/editborder"
        android:ems="10"
        android:hint="@string/EtHUsername"
        android:minHeight="48dp"
        android:paddingStart="10dp"
        android:inputType="text"
        />

    <View
        android:id="@+id/vSpacing8"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.01" />

    <TextView
        android:id="@+id/tvEmailCad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvEmail"
        android:textColor="@color/preto_fosco"
        android:layout_marginLeft="15dp"/>

    <EditText
        android:id="@+id/etEmailCad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/editborder"
        android:ems="10"
        android:hint="@string/etE_mail"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:paddingStart="10dp" />

    <View
        android:id="@+id/vSpacing2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.01" />

    <TextView
        android:id="@+id/tvPasswordCad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvPassword"
        android:textColor="@color/preto_fosco"
        android:layout_marginLeft="15dp"/>

    <EditText
        android:id="@+id/etPasswordCad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/editborder"
        android:ems="10"
        android:hint="@string/etPalavra_passe"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingStart="10dp" />

    <View
        android:id="@+id/vSpacing5"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.01" />

        <TextView
        android:id="@+id/tvNIFCad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvNIF"
        android:textColor="@color/preto_fosco"
        android:layout_marginLeft="15dp"/>

    <EditText
        android:id="@+id/etNIFCad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/editborder"
        android:ems="10"
        android:hint="@string/etNIF"
        android:inputType="number"
        android:minHeight="48dp"
        android:paddingStart="10dp" />

    <View
        android:id="@+id/vSpacing6"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.01" />

    <TextView
        android:id="@+id/tvTELECad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvTELE"
        android:textColor="@color/preto_fosco"
        android:layout_marginLeft="15dp"/>

    <EditText
        android:id="@+id/etTELECad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/editborder"
        android:ems="10"
        android:hint="@string/etTELE"
        android:inputType="number"
        android:minHeight="48dp"
        android:paddingStart="10dp" />

    <View
        android:id="@+id/vSpacing7"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.01" />

    <TextView
        android:id="@+id/tvMoradaCad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvMorada"
        android:textColor="@color/preto_fosco"
        android:layout_marginLeft="15dp"/>

    <EditText
        android:id="@+id/etMoradaCad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/editborder"
        android:ems="10"
        android:hint="@string/etMorada"
        android:inputType="text"
        android:minHeight="48dp"
        android:paddingStart="10dp" />

    <Button
        android:id="@+id/btnCadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:backgroundTint="#1B1B1B"
        android:insetTop="10dp"
        android:insetRight="15dp"
        android:onClick="onClickSignUp"
        android:paddingLeft="30dp"
        android:paddingTop="20dp"
        android:paddingRight="30dp"
        android:paddingBottom="20dp"
        android:text="@string/BtnCriar"
        android:textSize="20sp"
        app:cornerRadius="10dp" />

    <View
        android:id="@+id/vSpacing3"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.05" />

</LinearLayout>