<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF"
    android:orientation="horizontal"
    android:backgroundTint="@color/fundo_amarelo_seco"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvWelcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:text="@string/tvBV"
                android:textColor="@color/preto_fosco"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:paddingRight="15dp"
                android:text="@string/tvData"
                android:textColor="@color/preto_fosco"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="-10dp"
                android:layout_weight="1"
                android:text="@string/tvUser"
                android:textColor="@color/preto_fosco"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvSpacing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tvSpacing" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            app:srcCompat="@drawable/ic_sepline" />

        <View
            android:id="@+id/view3"
            android:layout_width="wrap_content"
            android:layout_height="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivVendas"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.1"
                app:srcCompat="@drawable/ic_shopbag" />

            <TextView
                android:id="@+id/tvMaisVendidas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tvVendas"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="20dp"
                android:layout_height="match_parent"
                android:layout_marginRight="15dp"
                android:layout_weight="0.05"
                app:srcCompat="@drawable/ic_filtericon"
                android:clickable="true"
                android:focusable="true"
                android:layout_gravity="center"
                android:onClick="onClickFunil"/>

        </LinearLayout>

        <View
            android:id="@+id/view5"
            android:layout_width="wrap_content"
            android:layout_height="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/editborderitem"
            android:ems="10"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:srcCompat="@drawable/imgspacer" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <View
                    android:id="@+id/view6"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.1" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.2"
                    android:text="@string/tvNome"
                    android:textStyle="bold" />

                <View
                    android:id="@+id/view7"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.05" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    android:text="@string/tvDescricao" />
            </LinearLayout>

        </LinearLayout>

        <View
            android:id="@+id/view8"
            android:layout_width="wrap_content"
            android:layout_height="20dp" />

    </LinearLayout>

</LinearLayout>