<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CervejaDetailsActivityADM">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <View
                android:id="@+id/view5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.1" />

            <ImageView
                android:id="@+id/imgCapa"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:src="@drawable/beer" />

            <EditText
                android:id="@+id/etNomeCev"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/et_NomeCev" />

            <EditText
                android:id="@+id/etDescricao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:minHeight="48dp"
                android:hint="@string/etDescricao" />

            <EditText
                android:id="@+id/etTeor_Alcool"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/etTeor_Alcool" />

            <EditText
                android:id="@+id/etPreco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/etPreco"
                android:inputType="numberDecimal" />

            <CheckBox
                android:id="@+id/checkBoxEstado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.01"
                android:text="@string/ativa_para_clientes" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:weightSum="2"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="8dp"
                    android:layout_weight="1"
                    app:cardBackgroundColor="@color/grey"
                    app:cardCornerRadius="24dp"
                    app:cardElevation="0dp">

                    <Spinner
                        android:id="@+id/spinnerFornecedor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:padding="20dp" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="8dp"
                    android:layout_weight="1"
                    app:cardBackgroundColor="@color/grey"
                    app:cardCornerRadius="24dp"
                    app:cardElevation="0dp">

                    <Spinner
                        android:id="@+id/spinnerCategoria"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:padding="20dp" />

                </androidx.cardview.widget.CardView>
            </LinearLayout>


            <View
                android:id="@+id/Space"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.4" />
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabGuardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="16dp"
        android:onClick="onClickAddCerveja"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/amarelo_seco"
        android:clickable="true"
        android:contentDescription="@string/save"
        android:focusable="true"
        android:src="@drawable/ic_save"
        android:tint="@android:color/white" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>