<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:backgroundTint="@color/fundo_amarelo_seco"
    android:divider="@color/white"
    android:orientation="vertical"
    tools:context=".HomeFragment">

    <!-- LinearLayout principal que contém os widgets do fragment -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Primeira linha com TextViews -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvWelcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:text="@string/tvBV"
                android:textColor="@color/preto_fosco"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:paddingRight="15dp"
                android:text="@string/tvData"
                android:textColor="@color/preto_fosco"
                android:textSize="20sp" />
        </LinearLayout>

        <!-- Segunda linha com TextViews -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="-10dp"
                android:layout_weight="1"
                android:text="@string/tvUser"
                android:textColor="@color/preto_fosco"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tvSpacing" />
        </LinearLayout>

        <!-- Linha separadora -->
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            app:srcCompat="@drawable/ic_sepline" />

        <!-- Espaço em branco -->
        <View
            android:id="@+id/view3"
            android:layout_width="wrap_content"
            android:layout_height="20dp" />

        <!-- Linha Vendas e Funil -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivVendas"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.1"
                app:srcCompat="@drawable/ic_shopbag" />

            <TextView
                android:id="@+id/tvMaisVendidas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tvVendas"
                android:textSize="24sp" />

        </LinearLayout>

        <View
            android:id="@+id/vMeio"
            android:layout_width="match_parent"
            android:layout_height="20dp" />

    </LinearLayout>

    <!-- Layout de Atualização e Lista -->
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ListView
            android:id="@+id/lv_cervejas"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@color/fundo_amarelo_seco"
            android:dividerHeight="5dp" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</LinearLayout>
